[gd_scene load_steps=18 format=3 uid="uid://dp3yqnfcjai4l"]

[ext_resource type="PackedScene" uid="uid://dmpbuxf4kqwr3" path="res://src/Scenes/Enemies/API/enemy_space_ship.tscn" id="1_0btdm"]
[ext_resource type="Script" path="res://src/Scripts/Entity/Enemies/Frigate/frigate.gd" id="2_edend"]
[ext_resource type="PackedScene" uid="uid://hv3vawus1knu" path="res://src/Scenes/Enemies/Types/frigate_torpedo.tscn" id="3_vng6o"]
[ext_resource type="Texture2D" uid="uid://c8j0oatxbni2x" path="res://Assets/Textures/Enemies/Frigate/Kla'ed - Frigate - Destruction.png" id="3_x6xy7"]
[ext_resource type="Texture2D" uid="uid://i1giwt6623vu" path="res://Assets/Textures/Enemies/Frigate/Kla'ed - Frigate - Engine.png" id="4_b3b4p"]
[ext_resource type="AudioStream" uid="uid://nscn40kuy7dd" path="res://Assets/Sounds/Enemies/Death.wav" id="5_wncw0"]
[ext_resource type="Texture2D" uid="uid://dm2j4gewkk3vw" path="res://Assets/Textures/Enemies/Frigate/Kla'ed - Frigate - Shield.png" id="6_cvsuv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_druwn"]
radius = 17.0
height = 44.0

[sub_resource type="Animation" id="Animation_5y7lu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_1h4qq"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcwvf"]
_data = {
"RESET": SubResource("Animation_5y7lu"),
"death": SubResource("Animation_1h4qq")
}

[sub_resource type="Animation" id="Animation_g56nf"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_bagbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ox8ep"]
_data = {
"Idle": SubResource("Animation_g56nf"),
"RESET": SubResource("Animation_bagbt")
}

[sub_resource type="Animation" id="Animation_itaom"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_ady5h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hifx"]
_data = {
"Idle": SubResource("Animation_itaom"),
"RESET": SubResource("Animation_ady5h")
}

[node name="Frigate" groups=["enemies"] instance=ExtResource("1_0btdm")]
script = ExtResource("2_edend")
torpedo = ExtResource("3_vng6o")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CapsuleShape2D_druwn")

[node name="VisibleOnScreenNotifier2D" parent="." index="1"]
position = Vector2(-4.76837e-07, -1.5)
scale = Vector2(1.8, 1.95)

[node name="Sprite2D" parent="." index="2"]
texture = ExtResource("3_x6xy7")
flip_v = true
hframes = 9
frame = 1

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_wcwvf")
}

[node name="death" parent="." index="4"]
stream = ExtResource("5_wncw0")

[node name="EnginePlayer" parent="." index="5"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_ox8ep")
}

[node name="Engine" parent="." index="6"]
texture = ExtResource("4_b3b4p")
flip_v = true
hframes = 12
frame = 1

[node name="TimerBetweenShoot" type="Timer" parent="." index="7"]
wait_time = 2.0
autostart = true

[node name="ShootPosition" type="Marker2D" parent="." index="8"]
position = Vector2(0, 22)

[node name="ShieldPlayer" type="AnimationPlayer" parent="." index="9"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_0hifx")
}

[node name="Shield" type="Sprite2D" parent="." index="10"]
texture = ExtResource("6_cvsuv")
flip_v = true
hframes = 40
frame = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TimerBetweenShoot" to="." method="_on_timer_between_shoot_timeout"]
